--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,9 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.0'
-group = 'com.stebars.headbump' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'headbump'
+version = '1.16.5-1.1'
+group = 'com.stebars.armorexchanger' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = 'armorexchanger'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
 
@@ -55,7 +55,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                headbump {
+                armorexchanger {
                     source sourceSets.main
                 }
             }
@@ -77,7 +77,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                headbump {
+                armorexchanger {
                     source sourceSets.main
                 }
             }
@@ -99,10 +99,10 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
-            args '--mod', 'headbump', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+            args '--mod', 'armorexchanger', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
             mods {
-                headbump {
+                armorexchanger {
                     source sourceSets.main
                 }
             }
@@ -143,7 +143,7 @@ dependencies {
 jar {
     manifest {
         attributes([
-            "Specification-Title": "headbump",
+            "Specification-Title": "armorexchanger",
             "Specification-Vendor": "stebars",
             "Specification-Version": "1",
             "Implementation-Title": project.name,
